--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,8 +1,9 @@
 {
     "cosmere-advanced-encounters": {
-        "actions_remaining": "Actions remaining",
-        "toggle_reaction": "Toggle reaction used",
-        "revert_used_action": "Restore used action",
+        "use_action": "Use action",
+        "use_reaction": "Use reaction",
+        "restore_action": "Restore used action",
+        "restore_reaction": "Restore used reaction",
         "cost_manual": "Manual Action",
         "settings": {
             "refreshCombatantActionsWhen": {
