Addable actions on turn refactor (#23)
* Made combatant_actions.hbs respect actionGroups instead of just actions

* First pass on refactor, mostly functional

* Removed weird update lag

* Fixed remaining localization issues from refactor

* Renamed getCombatantActionsFromId to match chat message integration

* Added slots for free actions and special aactions

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,8 +1,10 @@
 {
     "cosmere-advanced-encounters": {
-        "actions_remaining": "Actions remaining",
-        "toggle_reaction": "Toggle reaction used",
-        "revert_used_action": "Restore used action",
+        "use_action": "Use action",
+        "use_reaction": "Use reaction",
+        "restore_action": "Restore used action",
+        "remove_action": "Remove used action",
+        "restore_reaction": "Restore used reaction",
         "cost_manual": "Manual Action",
         "settings": {
             "refreshCombatantActionsWhen": {
