--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -33,6 +33,11 @@
                 "none": "Nothing",
                 "warn": "Warn the player",
                 "block": "Warn the player and block the action"
+            },
+            "conditionsApplyToActions":
+            {
+                "name": "Conditions apply to combatant actions",
+                "hint": "Determines whether conditions which affect actions (like disoriented, stunned, and surprised) affect the actions on a combatant's turn"
             }
         },
         "warning":
