Made "activate" button set current combat turn

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -6,6 +6,7 @@
         "remove_action": "Remove used action",
         "restore_reaction": "Restore used reaction",
         "cost_manual": "Manual Action",
+        "activate_combatant": "Activate Combatant",
         "settings": {
             "pullActionsFromChat": {
                 "name": "Pull actions from chat",
