--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -6,6 +6,7 @@
         "remove_action": "Remove used action",
         "restore_reaction": "Restore used reaction",
         "cost_manual": "Manual Action",
+        "activate_combatant": "Activate Combatant",
         "settings": {
             "pullActionsFromChat": {
                 "name": "Pull actions from chat",
@@ -23,7 +24,37 @@
                 "turnStart": "On combatant turn start",
                 "roundStart": "On combat round start",
                 "onlyManual": "Only allow manual refreshing of actions"
+            },
+            "checkActionUsability": {
+                "name": "Action usability check type",
+                "hint": "Determines what the behavior should be when a combatant uses actions or reactions that they don't have enough remaining to use."
+            },
+            "check_action_usability_options":
+            {
+                "none": "Nothing",
+                "warn": "Warn the player",
+                "block": "Warn the player and block the action"
+            },
+            "conditionsApplyToActions":
+            {
+                "name": "Conditions apply to combatant actions",
+                "hint": "Determines whether conditions which affect actions (like disoriented, stunned, and surprised) affect the actions on a combatant's turn"
+            },
+            "activateSetsTurn":
+            {
+                "name": "Use activate button to set turn",
+                "hint": "Changes the 'Mark as Acted' button to an 'activate' button, which sets the combat turn to be that actor's turn."
             }
+        },
+        "warning":
+        {
+            "notEnoughActionType": "{actor} does not have enough {actionCostType}s to use {actionName}!"
+        },
+        "actionCostType":{
+            "act": "action",
+            "rea": "reaction",
+            "fre": "free action",
+            "spe": "special action"
         }
     }
 }
